# AlgoSort

./: .gitignore  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeLists.txt  Makefile  SortAlgorithms.cpp  SortAlgorithms.h  SortController.cpp  SortController.h  Sortable.cpp  Sortable.h  Utils.cpp  Utils.h  cmake_install.cmake  compile_commands.json  install.sh  main.cpp  sorting-visualizer.files
